# simp

./: .gitignore  Cargo.toml  LICENSE  bench.py  build.rs
.github/workflows/: ghp.yml
benches/: parser_bench.rs
src/: ast.rs  ast_bump.rs  ast_flat.rs  ast_interned.rs  ast_super_flat.rs  error.rs  intern.rs  lib.rs  main.rs  parser.rs  parser_bump.rs  parser_flat.rs  parser_interned.rs  parser_super_flat.rs  span.rs  token.rs
src/intern/: simple.rs
src/parser/: tests.rs
src/parser/snapshots/: simp__parser__tests__inputs__invalid__stmt_let_missing_eq.snap  simp__parser__tests__inputs__valid__expr_after_stmt_fn.snap  simp__parser__tests__inputs__valid__expr_after_stmt_let.snap  simp__parser__tests__inputs__valid__expr_block.snap  simp__parser__tests__inputs__valid__expr_fn_call.snap  simp__parser__tests__inputs__valid__expr_group.snap  simp__parser__tests__inputs__valid__expr_str.snap  simp__parser__tests__inputs__valid__stmt_fn_multi_param.snap  simp__parser__tests__inputs__valid__stmt_fn_nested_fn.snap  simp__parser__tests__inputs__valid__stmt_fn_single_param.snap  simp__parser__tests__inputs__valid__stmt_let.snap  simp__parser__tests__tests__inputs__invalid__bad_int.snap  simp__parser__tests__tests__inputs__invalid__expr_before_block.snap  simp__parser__tests__tests__inputs__invalid__stmt_fn_missing_paren.snap  simp__parser__tests__tests__inputs__valid__expr_after_block.snap  (+6 more)
src/parser_bump/: tests.rs
src/parser_flat/: tests.rs
src/parser_interned/: tests.rs
src/parser_super_flat/: tests.rs
web/: Cargo.toml  index.html
web/src/: main.rs
(+92 files in other folders)
